# CMAKE-OPENGL-TEMPLATE

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json  makefile
src/: main.cpp
